--- a/src/uik/Alert.html
+++ b/src/uik/Alert.html
@@ -4,7 +4,7 @@
   <!-- Icon component with info icon and 'uik-alert__icon' class -->
   <svg class="uik-alert__icon uik-icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm0-338c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"></path></svg>
 
-  <div class="uik-alert__text">This is a default alert.<br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lobortis tortor nec hendrerit hendrerit.</div>
+  <div class="uik-alert__text">This is a default alert.</div>
 
   <button class="uik-alert__close-btn">
       <!-- Icon component with 'X' icon and 'uik-alert__close-btn-icon' class -->
@@ -21,7 +21,7 @@ Add class 'uik-alert--danger'
   <!-- Icon component with exclamation icon and 'uik-alert__icon' class -->
   <svg class="uik-alert__icon uik-icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M248.747 204.705l6.588 112c.373 6.343 5.626 11.295 11.979 11.295h41.37a12 12 0 0 0 11.979-11.295l6.588-112c.405-6.893-5.075-12.705-11.979-12.705h-54.547c-6.903 0-12.383 5.812-11.978 12.705zM330 384c0 23.196-18.804 42-42 42s-42-18.804-42-42 18.804-42 42-42 42 18.804 42 42zm-.423-360.015c-18.433-31.951-64.687-32.009-83.154 0L6.477 440.013C-11.945 471.946 11.118 512 48.054 512H527.94c36.865 0 60.035-39.993 41.577-71.987L329.577 23.985zM53.191 455.002L282.803 57.008c2.309-4.002 8.085-4.002 10.394 0l229.612 397.993c2.308 4-.579 8.998-5.197 8.998H58.388c-4.617.001-7.504-4.997-5.197-8.997z"></path></svg>
 
-  <div class="uik-alert__text">This is a danger alert.<br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lobortis tortor nec hendrerit hendrerit.</div>
+  <div class="uik-alert__text">An error has occurred.</div>
 
   <button class="uik-alert__close-btn">
       <!-- Icon component with 'X' icon and 'uik-alert__close-btn-icon' class -->
@@ -38,7 +38,7 @@ Add class 'uik-alert--success'
   <!-- Icon component with check icon and 'uik-alert__icon' class -->
   <svg class="uik-alert__icon uik-icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"></path></svg>
 
-  <div class="uik-alert__text">This is a success alert.<br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lobortis tortor nec hendrerit hendrerit.</div>
+  <div class="uik-alert__text">Successfully updated.</div>
 
   <button class="uik-alert__close-btn">
       <!-- Icon component with 'X' icon and 'uik-alert__close-btn-icon' class -->
