Add Card with larger padding

--- a/src/uik/Card.html
+++ b/src/uik/Card.html
@@ -7,3 +7,14 @@
       ...
   </div>
 </div>
+
+<!-- Card with larger padding -->
+<div class="uik-card uik-card--large-padding">
+  
+  <!-- Headline is optional -->
+  <div class="uik-card__headline">Card</div>
+
+  <div class="uik-card__content">
+      ...
+  </div>
+</div>
