Add Loading state in Button component

--- a/src/uik/Button.html
+++ b/src/uik/Button.html
@@ -65,6 +65,24 @@
 </button>
 
 <!--
+  Loading button
+  Add class 'uik-button--loading' and Loading component
+-->
+<button class="uik-button uik-button--loading">
+  <div class="uik-loading">
+      <div class="uik-loading__spinner">
+          <div class="uik-loading__spinner-dot"></div>
+          <div class="uik-loading__spinner-dot"></div>
+          <div class="uik-loading__spinner-dot"></div>
+          <div class="uik-loading__spinner-dot"></div>
+          <div class="uik-loading__spinner-dot"></div>
+          <div class="uik-loading__spinner-dot"></div>
+      </div>
+  </div>
+  <span class="uik-button__text">Button</span>
+</button>
+
+<!--
   Button with icon only
   Add class 'uik-button--icon' and Icon component with class 'uik-button__icon'
 -->
